# haskelldocumentation

./: .travis.yml  CONTENT.md  OUTLINE.md  README.md
content/: all-about-exceptions.md  all-about-strings.md  basic-tooling-guide.md  common-language-extensions.md  common-typeclasses.md  covariance-contravariance.md  designing-apis-for-extensibility.md  exceptions-best-practices.md  haskell-glossary.md  ide-and-linters.md  monad-transformers.md  overview-streaming-data-libraries.md  primitive-haskell.md  vector.md
exercises/: README.md  hands-on-haskell.cabal
exercises/BinTree/: BinTree.hs  BinTreeSpec.hs
exercises/Functions/: Functions.hs  FunctionsSpec.hs
exercises/HigherOrderFunctions/: HigherOrderFunctions.hs  HigherOrderFunctionsSpec.hs
exercises/LogParser/: LogParser.hs  LogParserSpec.hs
exercises/Maybe/: Maybe.hs  MaybeSpec.hs
exercises/PatternMatching/: PatternMatching.hs  PatternMatchingSpec.hs
exercises/ProjectEuler/: ProjectEuler.hs  ProjectEulerSpec.hs
exercises/QuickCheck/: QuickCheck.hs  QuickCheckSpec.hs
exercises/Recursion/: Recursion.hs  RecursionSpec.hs
exercises/RecursionSchemes/: RecursionSchemes.hs  RecursionSchemesSpec.hs
exercises/Regex/: Regex.hs  RegexSpec.hs
exercises/TextCalculator/: TextCalculator.hs  TextCalculatorSpec.hs
exercises/UpdateRecords/: UpdateRecords.hs  UpdateRecordsSpec.hs
exercises/Vigenere/: Vigenere.hs  VigenereSpec.hs
outline/: intermediate-haskell.md
src/: upload.sh
src/soh-upload/: .gitignore  Main.hs  Preprocess.hs  cabal.config  soh-upload.cabal  stack.yaml  upload.sh
