name:                soh-upload
version:             1.0
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10
synopsis:
  Upload markdown files to School of Haskell

executable soh-upload
  main-is:             Main.hs
  other-modules:       Preprocess
  other-extensions:    OverloadedStrings, RecordWildCards, LambdaCase, DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveDataTypeable
  build-depends:
      base >=4.7
    , exceptions >=0.6
    , aeson >=0.8
    , bytestring >=0.10
    , containers >=0.5
    , text >=0.11
    , time >=1.4
    , yaml >=0.8
    , http-client >=0.4
    , http-client-tls >=0.2
    , http-types >=0.8
    , directory >=1.2
    , html-conduit >=1.1
    , xml-conduit >=1.2
    , pcre-light >=0.4
    , resourcet >=1.1
    , conduit >=1.2
    , conduit-extra >=1.1
    , xml-types >=0.3
    , markdown >=0.1
    , transformers >=0.3
    , blaze-html >=0.7

  default-language:    Haskell2010
